--- a/src/q6.ipynb
+++ b/src/q6.ipynb
@@ -40,6 +40,7 @@
    "metadata": {},
    "source": [
     "## 6.1  Upscaling :\n",
+    "\n",
     "We do **nearest neighbour interpolation** since each value in the label map represents some component and is an integer. Thus its not desirable to produce new value and thus any other form of interpolation like linear or cubic can't be performed.\n",
     "Even forward mapping is not desirable as some part of image will have black pixels which are not real.\n",
     "\n",
@@ -47,7 +48,10 @@
     "#### Steps\n",
     "\n",
     "1. Create a new image with new scaled dimensions filled with zeros.\n",
-    "2. Do **backward mapping** for each pixel of new image by multiplying a pixel location with the affine matrix of the transformation.\n"
+    "2. Do **backward mapping** for each pixel of new image by multiplying a pixel location with the affine matrix of the transformation.\n",
+    "\n",
+    "<img src=\"../images/6.1.jpeg\" alt=\"Drawing\" style=\"width: 700px;\"/>\n",
+    "<img src=\"../images/6.1.1.jpeg\" alt=\"Drawing\" style=\"width: 700px;\"/>"
    ]
   },
   {
@@ -149,7 +153,7 @@
     "1. Perform rotation  by using matrix of $\\cos{\\theta}$ and $\\sin{\\theta}$. \n",
     "1. Translate back to 0,0\n",
     "\n",
-    "\n"
+    "<img src=\"../images/6.2.jpeg\" alt=\"Drawing\" style=\"width: 700px;\"/>\n"
    ]
   },
   {
@@ -228,7 +232,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
