--- a/src/q1.ipynb
+++ b/src/q1.ipynb
@@ -677,7 +677,18 @@
    "metadata": {},
    "source": [
     "**Observations** Change observed betweeen successive iterations was very low of skeletonization.  <br>\n",
-    "Keyhole took lesser number of iterations to converge than dragon or butterfly images"
+    "Keyhole took lesser number of iterations to converge than dragon or butterfly images. <br>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| image| Iterations| error|\n",
+    "|------|------|------|\n",
+    "|   dragon  | 75| 0.00016|\n",
+    "|   butterfly  | 77 |0.000044|\n",
+    "|   keyhole  | 47|0.00015|\n"
    ]
   }
  ],
