--- a/src/q6.ipynb
+++ b/src/q6.ipynb
@@ -272,6 +272,13 @@
     "\n",
     "display_img_arr(images,2, 2, (15, 15), titles)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that both skimage and my custom function give same components as original image."
+   ]
   }
  ],
  "metadata": {
